--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -122,6 +122,12 @@ dependencies {
     def paging_version = "2.1.2"
     implementation "androidx.paging:paging-runtime:$paging_version"
 
+    /* ViewPager2 */
+    implementation "androidx.viewpager2:viewpager2:1.1.0-alpha01"
+
+    /* PhotoView */
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
     /* test */
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
