--- a/data/build.gradle
+++ b/data/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     /* kotlin */
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "org.jetbrains.kotlin:kotlin-reflect:1.3.71"
+    api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
 
     /* koin */
