--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     /* ViewModel and LiveData */
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    /* constraintlayout */
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     /* design components */
@@ -95,10 +96,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 
     /* BaseRecyclerViewAdapterHelper */
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.0-beta11'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.3'
 
     /* Recyclerview */
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    /* CardView */
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     /* Allow your app to build and read multiple DEX files. */
     /* Avoids an error that indicates that the app has reached
