--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,11 @@ kotlin.code.style=official
 # global dependency versions
 splitties_version = 3.0.0-alpha06
 multidexVersion = 2.0.1
+koin_version = 2.0.1
+coroutines_version = 1.3.5
+kotlin_version = 1.3.72
+room_version = 2.2.5
+retrofit_version = 2.7.1
 
 # envirement variables
 env.HOST_URL=https://restcountries.eu/
