--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -58,42 +58,37 @@ dependencies {
     implementation project(":domain")
     implementation project(":di")
 
-    /* android */
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    /* kotlin */
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    /* ViewModel and LiveData */
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-
-    /* constraintlayout */
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     /* design components */
     implementation 'com.google.android.material:material:1.1.0'
 
-    /* Pass the layout ID to the constructor */
-    implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.4'
+    /* android */
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
 
-    /* kotlin */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    /* constraintlayout */
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    /* ViewModel and LiveData */
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
     /* koin */
-    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
     api "org.koin:koin-androidx-viewmodel:2.0.1"
     api "org.koin:koin-core:2.0.1"
     api "org.koin:koin-androidx-scope:2.0.1"
 
-    /* glide */
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-
-    /* architecture components */
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    /* Glide (Image caching and management) */
+    def glideVersion = "4.11.0"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
 
     /* BaseRecyclerViewAdapterHelper */
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.3'
