animated searchBar implemented

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ subprojects {
             /* coroutines  */
             implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
             implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+            /* Paging */
+            implementation "androidx.paging:paging-runtime:$paging_version"
         }
     }
 }
