--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ coroutines_version = 1.3.5
 kotlin_version = 1.3.72
 room_version = 2.2.5
 retrofit_version = 2.7.1
+paging_version = 2.1.2
 
 # envirement variables
 env.HOST_URL=https://restcountries.eu/
