--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     /* android */
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0-rc01'
     implementation 'androidx.core:core-ktx:1.2.0'
 
     /* constraintlayout */
