--- a/gradle.properties
+++ b/gradle.properties
@@ -24,11 +24,15 @@ kotlin.code.style=official
 splitties_version = 3.0.0-alpha06
 multidexVersion = 2.0.1
 koin_version = 2.0.1
-coroutines_version = 1.3.5
+coroutines_version = 1.4.0-M1
 kotlin_version = 1.4.10
 room_version = 2.2.5
 retrofit_version = 2.7.1
 paging_version = 2.1.2
+appcompat_version = 1.2.0
+material = 1.2.1
+fragment_version = 1.3.0-beta01
+activity_version = 1.2.0-beta01
 
 # envirement variables
 env.HOST_URL=https://restcountries.eu/
