--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -8,6 +8,7 @@ android {
     buildToolsVersion "29.0.3"
     buildFeatures {
         dataBinding = true
+        viewBinding = true
     }
     defaultConfig {
         applicationId "ua.turskyi.travelling"
@@ -68,14 +69,14 @@ dependencies {
     api "org.koin:koin-androidx-scope:$koin_version"
 
     /* design components */
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation "com.google.android.material:material:$material"
+
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.activity:activity-ktx:$activity_version"
 
     /* android */
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
-    implementation 'androidx.core:core-ktx:1.3.1'
-
-    /* constraintlayout */
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation 'androidx.core:core-ktx:1.3.2'
 
     /* ViewModel and LiveData */
     def lifecycle_version = "2.2.0"
@@ -93,7 +94,7 @@ dependencies {
     implementation 'com.github.corouteam:GlideToVectorYou:2.0.0'
 
     /* BaseRecyclerViewAdapterHelper */
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.3'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
 
     /* Recyclerview */
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -118,7 +119,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     /* Location */
-    implementation "com.google.android.gms:play-services-location:17.0.0"
+    implementation "com.google.android.gms:play-services-location:17.1.0"
 
     /* Facebook SDK */
     implementation 'com.facebook.android:facebook-share:5.1.1'
