--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "ua.turskyi.travelling"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.0.0"
+        versionCode 3
+        versionName "1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -125,8 +125,11 @@ dependencies {
     implementation 'com.facebook.android:facebook-share:5.1.1'
     implementation 'com.facebook.android:facebook-applinks:5.1.1'
 
+    def lottieVersion = "3.4.4"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
     /* test */
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
