--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
@@ -77,6 +78,7 @@ dependencies {
     /* android */
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'com.android.billingclient:billing:3.0.1'
 
     /* ViewModel and LiveData */
     def lifecycle_version = "2.2.0"
@@ -127,6 +129,16 @@ dependencies {
 
     def lottieVersion = "3.4.4"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    /*  Bill of Materials for the Firebase platform */
+    implementation platform('com.google.firebase:firebase-bom:26.0.0')
+    /* When using the BoM, no need to specify versions in Firebase library dependencies */
+
+    /* Firebase SDK for Google Analytics */
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    /* Firebase for authentication */
+    implementation 'com.google.firebase:firebase-auth'
 
     /* test */
     testImplementation 'junit:junit:4.13.1'
