--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -21,7 +21,7 @@ jobs:
     - name: upload artifact to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1
       with:
-        appId: ${{secrets.FIREBASE_APP_ID}}
+        appId: ${{secrets.FIREBASE_ANDROID_APPID}}
         token: ${{secrets.FIREBASE_TOKEN}}
         groups: testers
         releaseNotes: "App Build"
