--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
@@ -42,6 +41,20 @@ subprojects {
 
             /* Paging */
             implementation "androidx.paging:paging-runtime:$paging_version"
+
+            /*  Bill of Materials for the Firebase platform */
+            implementation platform('com.google.firebase:firebase-bom:26.0.0')
+            /* When using the BoM, no need to specify versions in Firebase library dependencies */
+
+            /* Firebase SDK for Google Analytics */
+            implementation 'com.google.firebase:firebase-analytics-ktx'
+
+            /* Declare the dependency for the Cloud Firestore library */
+            implementation 'com.google.firebase:firebase-firestore-ktx'
+
+            /* Firebase for authentication */
+            implementation 'com.google.firebase:firebase-auth'
+            implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
         }
     }
 }
