--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -17,6 +16,8 @@ android {
         targetSdkVersion 30
         versionCode 3
         versionName "1.0.1"
+        /* to ensure that the translations of Firebase library are relevant to the application */
+        resConfigs "en"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -78,7 +79,7 @@ dependencies {
     /* android */
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'com.android.billingclient:billing:3.0.1'
+    implementation 'com.android.billingclient:billing:3.0.2'
 
     /* ViewModel and LiveData */
     def lifecycle_version = "2.2.0"
@@ -104,10 +105,6 @@ dependencies {
     /* CardView */
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    /* Helpers for intents, dialogs & toasts, logging, resources & dimensions. */
-    implementation("com.louiscad.splitties:splitties-toast:$splitties_version")
-    implementation("com.louiscad.splitties:splitties-activities:$splitties_version")
-
     /* Android chart view / graph view library */
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
@@ -124,26 +121,13 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:17.1.0"
 
     /* Facebook SDK */
-    implementation 'com.facebook.android:facebook-share:8.1.0'
-    implementation 'com.facebook.android:facebook-applinks:8.1.0'
+    def facebookVersion = "8.1.0"
+    implementation "com.facebook.android:facebook-share:$facebookVersion"
+    implementation "com.facebook.android:facebook-applinks:$facebookVersion"
+    implementation "com.facebook.android:facebook-login:$facebookVersion"
 
     def lottieVersion = "3.4.4"
     implementation "com.airbnb.android:lottie:$lottieVersion"
-
-    /*  Bill of Materials for the Firebase platform */
-    implementation platform('com.google.firebase:firebase-bom:26.0.0')
-    /* When using the BoM, no need to specify versions in Firebase library dependencies */
-
-    /* Firebase SDK for Google Analytics */
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-
-    /* Declare the dependency for the Cloud Firestore library */
-    implementation 'com.google.firebase:firebase-firestore-ktx'
-    implementation 'com.google.firebase:firebase-firestore:22.0.0'
-
-    /* Firebase for authentication */
-    implementation 'com.google.firebase:firebase-auth'
 
     /* test */
     testImplementation 'junit:junit:4.13.1'
