--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -15,11 +15,13 @@ android {
         applicationId "ua.turskyi.travelling"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 5
-        versionName "1.0.3"
+        versionCode 6
+        versionName "1.0.4"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         /* to ensure that the translations of Firebase library are relevant to the application */
         resConfigs "en"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -83,6 +85,7 @@ dependencies {
     implementation 'com.android.billingclient:billing:3.0.2'
     implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.6.0'
 
     /* ViewModel and LiveData */
     def lifecycle_version = "2.2.0"
