--- a/gradle.properties
+++ b/gradle.properties
@@ -24,14 +24,14 @@ kotlin.code.style=official
 multidexVersion = 2.0.1
 koin_version = 2.0.1
 coroutines_version = 1.4.0-M1
-kotlin_version = 1.4.21
+kotlin_version = 1.4.31
 room_version = 2.2.6
 retrofit_version = 2.9.0
 paging_version = 2.1.2
 appcompat_version = 1.2.0
-material = 1.2.1
-fragment_version = 1.3.0-rc01
-activity_version = 1.2.0-rc01
+material = 1.3.0
+fragment_version = 1.3.0
+activity_version = 1.3.0-alpha03
 
 # envirement variables
 env.HOST_URL = https://restcountries.eu/
