--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -42,6 +42,9 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+/** used in manifest provider authorities */
+            resValue "string", "content_provider",
+                    "com.facebook.app.FacebookContentProvider285452062466394"
         }
         release {
             minifyEnabled false
@@ -84,16 +87,16 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'com.android.billingclient:billing:3.0.2'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
     implementation 'com.google.firebase:firebase-database-ktx:19.6.0'
 
     /* ViewModel and LiveData */
-    def lifecycle_version = "2.2.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    def lifecycle_version = "2.3.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     /* Glide (Image caching and management) */
     def glideVersion = "4.11.0"
@@ -125,7 +128,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     /* Location */
-    implementation "com.google.android.gms:play-services-location:17.1.0"
+    implementation "com.google.android.gms:play-services-location:18.0.0"
 
     /* Facebook SDK */
     def facebookVersion = "8.1.0"
@@ -137,7 +140,7 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     /* test */
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
