--- a/gradle.properties
+++ b/gradle.properties
@@ -30,8 +30,8 @@ retrofit_version = 2.9.0
 paging_version = 2.1.2
 appcompat_version = 1.2.0
 material = 1.3.0
-fragment_version = 1.3.0
-activity_version = 1.3.0-alpha03
+fragment_version = 1.3.2
+activity_version = 1.2.2
 
 # envirement variables
 env.HOST_URL = https://restcountries.eu/
