--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,18 +2,15 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-}
 buildscript {
     repositories {
         mavenCentral()
     }
 }
+
 repositories {
     mavenCentral()
 }
-
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
@@ -23,4 +20,13 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
