--- a/gradle.properties
+++ b/gradle.properties
@@ -21,28 +21,29 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 # global dependency versions
-multidexVersion = 2.0.1
-koin_version = 2.0.1
-coroutines_version = 1.4.0-M1
-kotlin_version = 1.4.31
-room_version = 2.2.6
-retrofit_version = 2.9.0
-paging_version = 2.1.2
-appcompat_version = 1.2.0
-material = 1.3.0
-fragment_version = 1.3.2
-activity_version = 1.2.2
+multidexVersion=2.0.1
+koin_version=2.1.6
+coroutines_version=1.4.0
+kotlin_version=1.4.32
+room_version=2.2.6
+retrofit_version=2.9.0
+paging_version=2.1.2
+appcompat_version=1.2.0
+material=1.3.0
+fragment_version=1.3.3
+activity_version=1.2.3
+okhttp_version=4.9.0
 
 # envirement variables
-env.HOST_URL = https://restcountries.eu/
-env.DATABASE_NAME = travelling.db
+env.HOST_URL=https://restcountries.eu/
+env.DATABASE_NAME=travelling.db
 
-env.SIGNING_KEY_DEBUG_PASSWORD = travelling
-env.SIGNING_KEY_DEBUG_KEY_PASSWORD = travelling
-env.SIGNING_KEY_DEBUG_PATH = ../keystore/travelling.jks
-env.SIGNING_KEY_DEBUG_KEY = key1
+env.SIGNING_KEY_DEBUG_PASSWORD=travelling
+env.SIGNING_KEY_DEBUG_KEY_PASSWORD=travelling
+env.SIGNING_KEY_DEBUG_PATH=../keystore/travelling.jks
+env.SIGNING_KEY_DEBUG_KEY=key1
 
-env.SIGNING_KEY_RELEASE_PASSWORD = travelling
-env.SIGNING_KEY_RELEASE_KEY_PASSWORD = travelling
-env.SIGNING_KEY_RELEASE_PATH = ../keystore/travelling.jks
-env.SIGNING_KEY_RELEASE_KEY = key1
+env.SIGNING_KEY_RELEASE_PASSWORD=travelling
+env.SIGNING_KEY_RELEASE_KEY_PASSWORD=travelling
+env.SIGNING_KEY_RELEASE_PATH=../keystore/travelling.jks
+env.SIGNING_KEY_RELEASE_KEY=key1
