--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.2"
 
     buildFeatures {
         dataBinding = true
@@ -51,6 +51,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
                     'proguard-rules.pro'
             signingConfig signingConfigs.release
+            /** used in manifest provider authorities */
+            resValue "string", "content_provider",
+                    "com.facebook.app.FacebookContentProvider285452062466394"
         }
     }
     compileOptions {
@@ -87,9 +90,9 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'com.android.billingclient:billing:3.0.3'
-    implementation 'com.google.firebase:firebase-crashlytics:17.4.1'
-    implementation 'com.google.firebase:firebase-analytics:18.0.2'
-    implementation 'com.google.firebase:firebase-database-ktx:19.7.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics:19.0.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
 
     /* ViewModel and LiveData */
     def lifecycle_version = "2.3.1"
@@ -110,7 +113,7 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
 
     /* Recyclerview */
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
 
     /* CardView */
     implementation 'androidx.cardview:cardview:1.0.0'
