--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -1,4 +1,4 @@
-name: Build & upload to Firebase App Distribution
+name: Upload to Firebase App Distribution and Deploy to Play Store
 
 on:
   push:
@@ -11,13 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
+      ## Checkout repository
+    - name: Checkout code
+      uses: actions/checkout@v2.3.3
+
+    - name: Set up JDK environment(JDK 1.8)
+      uses: actions/setup-java@v1.4.3
       with:
         java-version: 1.8
-    - name: build release
+
+    - name: Generate Release APK
       run: ./gradlew assembleRelease
+
+# Run tests
+    - name: Run Kotlin Linter
+      run: ./gradlew ktlintStagingDebugCheck
+
+    - name: Run Unit Tests
+      run: ./gradlew testStagingDebugUnitTest
+
     - name: upload artifact to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1
       with:
@@ -26,3 +38,47 @@ jobs:
         groups: testers
         releaseNotes: "App Build"
         file: presentation/build/outputs/apk/release/presentation-release.apk
+
+    - name: Sign APK
+        uses: r0adkll/sign-android-release@v1
+      # ID used to access action output
+        id: sign_app
+        with:
+          releaseDirectory: presentation/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+
+    - uses: actions/upload-artifact@master
+      with:
+        name: release.apk
+        path: ${{steps.sign_app.outputs.signedReleaseFile}}
+    - uses: actions/upload-artifact@master
+      with:
+        name: mapping.txt
+        path: presentation/build/outputs/mapping/release/mapping.txt
+
+  deploy-play-store:
+    needs: [ build ]
+    runs-on: ubuntu-latest
+    steps:
+      # 1
+      - uses: actions/download-artifact@master
+        with:
+          name: release.apk
+      - uses: actions/download-artifact@master
+        with:
+          name: mapping.txt
+      # 2
+      - name: Publish to Play Store internal test track
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+          # 3
+          packageName: ua.turskyi.travelling
+          releaseFile: presentation/build/outputs/apk/release/presentation-release.apk
+          track: internal
+          userFraction: 0.50
+          mappingFile: mapping.txt
+
