--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -33,6 +33,9 @@ jobs:
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
         keyPassword: ${{ secrets.KEY_PASSWORD }}
+      env:
+        // override default build-tools version (29.0.3) -- optional
+        BUILD_TOOLS_VERSION: "30.0.2"
 
     - uses: actions/upload-artifact@master
       with:
