--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -28,7 +28,7 @@ jobs:
       # ID used to access action output
       id: sign_app
       with:
-        releaseDirectory: app/build/outputs/apk/release
+        releaseDirectory: presentation/build/outputs/apk/release
         signingKeyBase64: ${{ secrets.SIGNING_KEY }}
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -52,7 +52,7 @@ jobs:
       # 1
       - uses: actions/download-artifact@master
         with:
-          name: release.apk
+          name: presentation-release.apk
       - uses: actions/download-artifact@master
         with:
           name: mapping.txt
