--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -24,7 +24,7 @@ jobs:
       run: ./gradlew assembleRelease
 
     - name: Sign APK
-      uses: r0adkll/sign-android-release@v1
+      uses: r0adkll/sign-android-release@v1.0.1
       # ID used to access action output
       id: sign_app
       with:
@@ -38,12 +38,12 @@ jobs:
 
     - uses: actions/upload-artifact@master
       with:
-        name: release.apk
+        name: presentation-release.apk
         path: ${{steps.sign_app.outputs.signedReleaseFile}}
     - uses: actions/upload-artifact@master
       with:
         name: mapping.txt
-        path: app/build/outputs/mapping/release/mapping.txt
+        path: presentation/build/outputs/mapping/release/mapping.txt
 
   deploy-play-store:
     needs: [ build ]
