remove mapping.txt in ci

--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -74,9 +74,9 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: release.apk
-      - uses: actions/download-artifact@v2
-        with:
-          name: mapping.txt
+#      - uses: actions/download-artifact@v2
+#        with:
+#          name: mapping.txt
       # 2
       - name: Publish to Play Store internal test track
         uses: r0adkll/upload-google-play@v1
@@ -87,5 +87,5 @@ jobs:
           releaseFile: presentation/build/outputs/apk/release/presentation-release.apk
           track: internal
           userFraction: 0.50
-          mappingFile: mapping.txt
+#          mappingFile: mapping.txt
 
