--- a/gradle.properties
+++ b/gradle.properties
@@ -19,18 +19,21 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+kapt.incremental.apt=true
 
 # global dependency versions
 multidexVersion=2.0.1
+# app does not work with koin version 2.2.2 does not work
 koin_version=2.1.6
 coroutines_version=1.4.0
-kotlin_version=1.4.32
+# app does not work with room version 2.3.0
 room_version=2.2.6
+kotlin_version=1.5.10
 retrofit_version=2.9.0
 paging_version=2.1.2
-appcompat_version=1.2.0
+appcompat_version=1.3.0
 material=1.3.0
-fragment_version=1.3.3
+fragment_version=1.3.4
 activity_version=1.2.3
 okhttp_version=4.9.0
 
