remove redundant code in ci

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -56,16 +56,7 @@ android {
                     "com.facebook.app.FacebookContentProvider285452062466394"
         }
     }
-    // for ci to publish on google play market
-    flavorDimensions "distribute"
-    productFlavors {
-        appCenter {
-            dimension "distribute"
-        }
-        googlePlay {
-            dimension "distribute"
-        }
-    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -153,9 +144,8 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     // for ci to publish on google play market
-    def appCenterSdkVersion = "3.3.0"
-    appCenterImplementation "com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}"
-    googlePlayImplementation "com.microsoft.appcenter:appcenter-distribute-play:${appCenterSdkVersion}"
+    def appCenterSdkVersion = '4.1.0'
+    implementation "com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}"
 
     // test
     testImplementation 'junit:junit:4.13.2'
