--- a/di/build.gradle
+++ b/di/build.gradle
@@ -35,12 +35,12 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
 
-    /* koin */
+    // koin
     api "org.koin:koin-androidx-viewmodel:$koin_version"
     api "org.koin:koin-core:$koin_version"
     api "org.koin:koin-androidx-scope:$koin_version"
 
-    /* test */
+    // test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
