--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ kapt.incremental.apt=true
 
 # global dependency versions
 multidexVersion=2.0.1
-# app does not work with koin version 2.2.2 does not work
+# app does not work with koin version 2.2.2
 koin_version=2.1.6
 coroutines_version=1.4.0
 # app does not work with room version 2.3.0
