--- a/data/build.gradle
+++ b/data/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     api "org.koin:koin-core:$koin_version"
     api "org.koin:koin-androidx-scope:$koin_version"
 
-    /* network */
+    // network
     api "com.squareup.okhttp3:okhttp:$okhttp_version"
     api "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -54,12 +54,12 @@ dependencies {
     api 'com.google.code.gson:gson:2.8.6'
     api 'com.auth0:java-jwt:3.11.0'
 
-    /* room */
+    // room
     api "androidx.room:room-runtime:$room_version"
     api "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    /* test */
+    // test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
