Defining versions in a single place

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion rootProject.compile_sdk_version
+    buildToolsVersion rootProject.build_tools_version
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 3
-        versionName "1.0.1"
+        minSdkVersion rootProject.min_sdk_version
+        targetSdkVersion rootProject.target_sdk_version
+        versionCode rootProject.version_code
+        versionName rootProject.version_name
         buildConfigField "String", "HOST_URL", "\"${rootProject.HOST_URL}\""
         buildConfigField "String", "DATABASE_NAME", "\"${rootProject.DATABASE_NAME}\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -35,12 +35,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    /* data module which is the inner (lower) layer of the project knows only about domain layer
+    * (a layer with interfaces which communicates with outer (top) level of the project ) */
     implementation project(':domain')
 
     // kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+    //   app does not work with koin version 2.2.2
     // koin
     api "org.koin:koin-androidx-viewmodel:$koin_version"
     api "org.koin:koin-core:$koin_version"
@@ -54,13 +57,14 @@ dependencies {
     api 'com.google.code.gson:gson:2.8.6'
     api 'com.auth0:java-jwt:3.11.0'
 
+//    app does not work with room version 2.3.0
     // room
     api "androidx.room:room-runtime:$room_version"
     api "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     // test
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 }
