--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    // Defining versions in a single place
+    ext {
+        // sdk versions
+        compile_sdk_version = 30
+        build_tools_version = "30.0.3"
+        min_sdk_version = 21
+        target_sdk_version = 30
+        version_code = 7
+        version_name = "1.0.5"
+    }
     repositories {
         google()
         mavenCentral()
@@ -81,6 +91,7 @@ ext {
         }
         return value
     }
+
     HOST_URL = getParam("HOST_URL")
     DATABASE_NAME = getParam("DATABASE_NAME")
 
