--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,6 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 kapt.incremental.apt=true
-
 # global dependency versions
 multidexVersion=2.0.1
 # app does not work with koin version 2.2.2
@@ -36,16 +35,16 @@ material=1.3.0
 fragment_version=1.3.4
 activity_version=1.2.3
 okhttp_version=4.9.0
-
+junit_version=4.13.2
+ext_junit_version=1.1.2
+espresso_version=3.3.0
 # envirement variables
 env.HOST_URL=https://restcountries.eu/
 env.DATABASE_NAME=travelling.db
-
 env.SIGNING_KEY_DEBUG_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_DEBUG_PASSWORD=travelling
 env.SIGNING_KEY_DEBUG_KEY=key1
 env.SIGNING_KEY_DEBUG_KEY_PASSWORD=travelling
-
 env.SIGNING_KEY_RELEASE_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_RELEASE_PASSWORD=travelling
 env.SIGNING_KEY_RELEASE_KEY=key1
