--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ kotlin.code.style=official
 kapt.incremental.apt=true
 # global dependency versions
 multidexVersion=2.0.1
-# app does not work with koin version 2.2.2
+# app does not work with koin version 2.2.3
 koin_version=2.1.6
 coroutines_version=1.4.0
 # app does not work with room version 2.3.0
@@ -32,12 +32,20 @@ retrofit_version=2.9.0
 paging_version=2.1.2
 appcompat_version=1.3.0
 material=1.3.0
-fragment_version=1.3.4
+fragment_version=1.3.5
 activity_version=1.2.3
 okhttp_version=4.9.0
 junit_version=4.13.2
 ext_junit_version=1.1.2
 espresso_version=3.3.0
+gson_version=2.8.6
+jwt_version=3.11.0
+# app does not work with firebase-ui version 7.2.0
+firebase_ui_auth_version=7.1.1
+build_gradle_version=4.2.1
+google_services_version=4.3.8
+firebase_crashlytics_gradle_version=2.7.0
+firebase_bom_version=26.2.0
 # envirement variables
 env.HOST_URL=https://restcountries.eu/
 env.DATABASE_NAME=travelling.db
