--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,13 @@ buildscript {
         classpath "com.android.tools.build:gradle:$build_gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+        classpath "io.insert-koin:koin-core-jvm:$insert_koin_version"
         // Google Services plugin (for firebase)
         classpath "com.google.gms:google-services:$google_services_version"
         // Crashlytics Gradle plugin
         classpath "com.google.firebase:firebase-crashlytics-gradle:$firebase_crashlytics_gradle_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -34,11 +37,6 @@ subprojects {
             implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
             // Add to avoid  w:Kotlin runtime JAR files in the classpath should have the same version
             implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-
-            // koin
-            implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-            implementation "org.koin:koin-core:$koin_version"
-            implementation "org.koin:koin-androidx-scope:$koin_version"
 
             // Retrofit2
             implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
