--- a/gradle.properties
+++ b/gradle.properties
@@ -22,27 +22,26 @@ kotlin.code.style=official
 kapt.incremental.apt=true
 # global dependency versions
 multidexVersion=2.0.1
-# app does not work with koin version 2.2.3
-koin_version=2.1.6
+insert_koin_version=3.1.2
 coroutines_version=1.4.0
 # app does not work with room version 2.3.0
 room_version=2.2.6
-kotlin_version=1.5.10
+kotlin_version=1.5.20
 retrofit_version=2.9.0
 paging_version=2.1.2
 appcompat_version=1.3.0
-material=1.3.0
+material=1.4.0
 fragment_version=1.3.5
 activity_version=1.2.3
 okhttp_version=4.9.0
 junit_version=4.13.2
-ext_junit_version=1.1.2
-espresso_version=3.3.0
+ext_junit_version=1.1.3
+espresso_version=3.4.0
 gson_version=2.8.6
 jwt_version=3.11.0
 # app does not work with firebase-ui version 7.2.0
 firebase_ui_auth_version=7.1.1
-build_gradle_version=4.2.1
+build_gradle_version=4.2.2
 google_services_version=4.3.8
 firebase_crashlytics_gradle_version=2.7.0
 firebase_bom_version=26.2.0
